fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@
 input::placeholder {
   color: black;
 }
+
+.noScrollBar::-webkit-scrollbar {
+  display: none;
+}
